--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "latex/book-gentoo"]
 	path = latex/book-gentoo
 	url = git@github.com:wrobel/book-gentoo.git
+[submodule "packaging/opensuse-build-service"]
+	path = packaging/opensuse-build-service
+	url = git@github.com:wrobel/opensuse-build-service.git
